--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <h1>Øvelse 1</h1>
 
         <div class="grid_1-1">
-            <img src="img/snaps.webp" alt="Snaps">
-            <img src="img/fanta.webp" alt="Fanta">
-            <img src="img/cola.webp" alt="Cola">
-            <img src="img/øl.webp" alt="Øl">
+            <img id="snaps" src="img/snaps.webp" alt="snaps">
+            <img id="fanta" src="img/fanta.webp" alt="fanta">
+            <img id="cola" src="img/cola.webp" alt="cola">
+            <img id="øl" src="img/øl.webp" alt="øl">
         </div>
 
     </main>
